--- a/about.html
+++ b/about.html
@@ -8,6 +8,13 @@
     <meta charset="UTF-8">
     <title>Open Shop Channel</title>
     <link rel="icon" type="image/png" href="./images/Open_Black.png">
+
+    <meta property="og:title" content="Open Shop Channel">
+    <meta property="og:site_name" content="oscwii.org">
+    <meta property="og:url" content="oscwii.org">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="./images/Open_Black.png">
 </head>
 <body style="max-width: 100%; overflow-x: hidden;">
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
