--- a/errors.html
+++ b/errors.html
@@ -10,6 +10,13 @@
     <title>Open Shop Channel</title>
     <link rel="icon" type="image/png" href="./images/Open_Black.png">
 
+    <meta property="og:title" content="Open Shop Channel">
+    <meta property="og:site_name" content="oscwii.org">
+    <meta property="og:url" content="oscwii.org">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="./images/Open_Black.png">
+
     <script>
         function errortable() {
             // Declare variables
