Discord logo no longer squished

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="col">
             <div class="card" style="width: 100%;">
                 <div class="card-body">
-                    <img src="./images/Discord-Logo+Wordmark-White.png" width="10%" height="10%" class="d-inline-block align-top" alt="">
+                    <img src="./images/Discord-Logo+Wordmark-White.png" width="10%" class="d-inline-block align-top" alt="">
                     <h5 class="card-title">Join our official Discord server</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Support, communication & feedback</h6>
                     <a class="btn btn-info btn-lg" href="https://discord.gg/by6mR5N" role="button">Join Now</a>
