--- a/downloads.html
+++ b/downloads.html
@@ -6,7 +6,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <head>
     <meta charset="UTF-8">
-    <title>Open Shop Channel</title>
+    <title>Open Shop Channel: Downloads</title>
     <link rel="icon" type="image/png" href="./images/Open_Black.png">
 
     <meta property="og:title" content="Open Shop Channel">
