Added feedback page

--- a/errors.html
+++ b/errors.html
@@ -64,6 +64,12 @@
                 <a class="nav-link" href="https://wiibrew.org/w/index.php?title=Open_Shop_Channel_Downloader">OSC-DL</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="https://www.brewtools.dev/?repo=osc-redist">OSC-REDIST</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./feedback.html">Feedback</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="./about.html">About</a>
             </li>
         </ul>
