--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 <a class="nav-link" href="https://www.brewtools.dev/?repo=osc-redist">OSC-REDIST</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="./feedback.html">Feedback</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="./about.html">About</a>
             </li>
         </ul>
@@ -53,6 +56,11 @@
     </div>
 </nav>
 <div style="margin-top: 30px; margin-right: 10px; margin-left: 10px;">
+    <div class="alert alert-dismissible alert-info">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <h4 class="alert-heading">Work in progress...</h4>
+        <p class="mb-0">Welcome to the Open Shop Channel Beta website. This website is unfinished and is actively taking feedback. Send feedback on <a href="./feedback.html" class="alert-link">the feedback page</a>.</p>
+    </div>
     <div class="jumbotron">
         <h1 class="display-4"><img src="./images/bluelogo.png" width="70" height="70" class="d-inline-block align-top" alt="">Shop 'till you drop.</h1>
         <p class="lead">The Open Shop Channel is a revival project for the Homebrew Browser, an application to download homebrew apps on the Wii.</p>
