--- a/feedback.html
+++ b/feedback.html
@@ -68,14 +68,14 @@
         <div class="form-group row">
             <label for="file" class="col-4 col-form-label">File</label>
             <div class="col-8">
-                <input type="file" class="form-control-file" id="file" aria-describedby="fileHelpBlock">
+                <input type="file" name="attachment" class="form-control-file" id="file" aria-describedby="fileHelpBlock">
                 <span id="fileHelpBlock" class="form-text text-muted">Screenshots and alike.</span>
             </div>
         </div>
         <div class="form-group row">
             <label for="textarea" class="col-4 col-form-label">Feedback</label>
             <div class="col-8">
-                <textarea id="textarea" name="textarea" cols="40" rows="10" class="form-control" aria-describedby="textareaHelpBlock" required="required"></textarea>
+                <textarea id="textarea" name="feedbacktext" cols="40" rows="10" class="form-control" aria-describedby="textareaHelpBlock" required="required"></textarea>
                 <span id="textareaHelpBlock" class="form-text text-muted">What's wrong? Suggestion? Mistake? Security?</span>
             </div>
         </div>
