--- a/feedback.html
+++ b/feedback.html
@@ -74,7 +74,7 @@
         </div>
         <div class="form-group row">
             <div class="offset-4 col-8">
-                <button name="submit" type="submit" class="btn btn-primary">Send Feedback</button>
+                <button type="submit" class="btn btn-primary">Send Feedback</button>
             </div>
         </div>
     </form>
