--- a/publish.html
+++ b/publish.html
@@ -43,8 +43,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="https://www.brewtools.dev/?repo=osc-redist">OSC-REDIST</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="./feedback.html">Feedback <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link" href="./feedback.html">Feedback</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./about.html">About</a>
