--- a/publish.html
+++ b/publish.html
@@ -53,7 +53,7 @@
         <form class="form-inline my-2 my-lg-0">
             <div class="btn-group" role="group" aria-label="Basic example">
                 <a href="./publish.html" class="btn btn-success" role="button">Publish</a>
-                <a href="" class="btn btn-dark disabled" role="button">Spot Portal</a>
+                <a href="" class="btn btn-dark disabled" role="button">Club Spot</a>
                 <a href="https://github.com/OpenShopChannel/" class="btn btn-warning" role="button">GitHub</a>
             </div>
         </form>
@@ -64,6 +64,10 @@
         <img src="./images/spotBanner.png" width="100%" class="d-inline-block align-top" alt="">
     </div>
     <div style="margin-top: 10%">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">Spot Author Portal</li>
+            <li class="breadcrumb-item active">Publish</li>
+        </ol>
         <h1>Publish Application</h1>
         <form action="https://send.pageclip.co/sWtBUu4SZLJoQxKnGucABeTxT4LGDqxh/PublishPend" method="post">
             <div class="form-group row">
