--- a/downloads.html
+++ b/downloads.html
@@ -53,7 +53,7 @@
         <form class="form-inline my-2 my-lg-0">
             <div class="btn-group" role="group" aria-label="Basic example">
                 <a href="./publish.html" class="btn btn-success" role="button">Publish</a>
-                <a href="" class="btn btn-dark disabled" role="button">Spot Portal</a>
+                <a href="" class="btn btn-dark disabled" role="button">Club Spot</a>
                 <a href="https://github.com/OpenShopChannel/" class="btn btn-warning" role="button">GitHub</a>
             </div>
         </form>
