--- a/publish.html
+++ b/publish.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label for="app_name" class="col-4 col-form-label">Author Name</label>
+                <label for="your_name" class="col-4 col-form-label">Author Name</label>
                 <div class="col-8">
                     <input id="your_name" required="required" name="your_name" type="text" class="form-control" aria-describedby="your_nameHelpBlock">
                     <span id="your_nameHelpBlock" class="form-text text-muted">Your name or username.</span>
