Corrected spelling error

--- a/publish.html
+++ b/publish.html
@@ -98,7 +98,7 @@
                         <option>New App</option>
                         <option>Update</option>
                     </select>
-                    <span id="submission_typeHelpBlock" class="form-text text-muted">New app, or an update to an up already published?</span>
+                    <span id="submission_typeHelpBlock" class="form-text text-muted">New app, or an update to an app already published?</span>
                 </div>
             </div>
             <div class="form-group row">
