--- a/feedback.html
+++ b/feedback.html
@@ -62,7 +62,7 @@
 <div style="margin-top: 30px; margin-right: 10px; margin-left: 10px;">
     <div class="alert alert-dismissible alert-info">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <strong>This is not the place to submit apps!</strong> Please <a href="./publish.html" class="alert-link">go here</a> for submitting an application for review.
+        <strong>This is not the place to submit apps or ask for support!</strong> Please <a href="./publish.html" class="alert-link">go here</a> for submitting an application for review.
     </div>
     <h1>Beta Website Feedback</h1>
     <form action="https://send.pageclip.co/sWtBUu4SZLJoQxKnGucABeTxT4LGDqxh/betasite-feedback" method="post">
