Fixed capitalization on home page

--- a/index.html
+++ b/index.html
@@ -79,16 +79,16 @@
         <div class="col">
             <div class="card" style="width: 100%; height: 100%;">
                 <div class="card-body">
-                    <h5 class="card-title">The Best Homebrew</h5>
+                    <h5 class="card-title">The best Homebrew</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Diverse library of apps</h6>
-                    <p class="card-text">We hand-pick the homebrew that goes into our repository.</p>
+                    <p class="card-text">We manually review and approve the homebrew that goes into our repository.</p>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card" style="width: 100%; height: 100%;">
                 <div class="card-body">
-                    <h5 class="card-title">No Need to Access Your SD Card</h5>
+                    <h5 class="card-title">No need to access your SD card</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Download over the internet</h6>
                     <p class="card-text">You can use your Wii to download homebrew, so you don't have to constantly put your SD Card in your computer to add homebrew.</p>
                 </div>
