Changed opengraph tags

--- a/publish.html
+++ b/publish.html
@@ -9,7 +9,7 @@
     <title>Open Shop Channel: Publish</title>
     <link rel="icon" type="image/png" href="./images/Open_Black.png">
 
-    <meta property="og:title" content="Open Shop Channel">
+    <meta property="og:title" content="Open Shop Channel: Publish App">
     <meta property="og:site_name" content="oscwii.org">
     <meta property="og:url" content="oscwii.org">
     <meta property="og:description" content="">
