Added link to API reference

--- a/errors.html
+++ b/errors.html
@@ -67,6 +67,9 @@
                 <a class="nav-link" href="https://www.brewtools.dev/?repo=osc-redist">OSC-REDIST</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="https://api-docs.oscwii.org/">API Reference</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="./feedback.html">Feedback</a>
             </li>
             <li class="nav-item">
