--- a/feedback.html
+++ b/feedback.html
@@ -43,6 +43,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="https://www.brewtools.dev/?repo=osc-redist">OSC-REDIST</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://api-docs.oscwii.org/">API Reference</a>
+            </li>
             <li class="nav-item active">
                 <a class="nav-link" href="./feedback.html">Feedback <span class="sr-only">(current)</span></a>
             </li>
