Disable submissions, as they no longer submit

--- a/publish.html
+++ b/publish.html
@@ -71,6 +71,13 @@
             <li class="breadcrumb-item">Spot Author Portal</li>
             <li class="breadcrumb-item active">Publish</li>
         </ol>
+
+        <div class="alert alert-dismissible alert-danger">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <h4 class="alert-heading">Submissions have been paused!!</h4>
+            <p class="mb-0">Submissions on beta.oscwii.org have been paused while we transition to a brand new website. If you want to submit an application in the meantime, <a href="https://discord.gg/by6mR5N" class="alert-link">join our discord server</a>.</p>
+        </div>
+
         <h1>Publish Application</h1>
         <form action="https://send.pageclip.co/sWtBUu4SZLJoQxKnGucABeTxT4LGDqxh/PublishPend" method="post">
             <div class="form-group row">
@@ -130,7 +137,7 @@
             </div>
             <div class="form-group row">
                 <div class="offset-4 col-8">
-                    <button type="submit" class="btn btn-primary">Submit application for moderation</button>
+                    <button type="submit" class="btn btn-primary" disabled>Submissions have been paused while we transition to a new website.</button>
                 </div>
             </div>
         </form>
